--- a/src/views/shared/_mainLayout.cshtml
+++ b/src/views/shared/_mainLayout.cshtml
@@ -19,7 +19,7 @@
         <div class="row">
             <div class="three wide column" id="sidebar">
                 <div class="ui secondary vertical fluid menu">
-                    <a class="item active">Центральные серверы</a>
+                    <a class="item active" asp-controller="agents" asp-action="index">Агенты серверов</a>
                     <div class="ui hidden divider"></div>
                     <a class="item">Информационные базы</a>
                     <a class="item">Администраторы</a>
