--- a/src/views/agents/Index.cshtml
+++ b/src/views/agents/Index.cshtml
@@ -14,6 +14,7 @@
         <th>Сетевое имя</th>
         <th>Порт</th>
         <th>Режим</th>
+        <th>Описание</th>
         <th>Удалить</th>
     </tr>
 </thead>
@@ -24,6 +25,7 @@
             <td>@row.СетевоеИмя</td>
             <td>@row.Порт</td>
             <td>@row.Режим</td>
+            <td>@row.Описание</td>
             <td><a asp-action="delete" asp-route-id="@row.Идентификатор"><i class="remove icon"></i></a></td>
         </tr>
     }
