--- a/src/views/agents/Item.cshtml
+++ b/src/views/agents/Item.cshtml
@@ -17,6 +17,9 @@
         <label for="Порт">Порт</label>
         <input name="Порт"></input>
     </p>
-    
+    <p class="field">
+        <label for="Описание">Описание</label>
+        <input name="Описание"></input>
+    </p>
     <button type="submit" class="ui primary button">Сохранить</button>
 </form>
